fix width and hieght for adjust text overflow

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 
 .clock{
-    width: 600px;
-    height: 300px;
+    width: 650px;
+    height: 325px;
     margin: 0 auto;
     display: flex;
     padding: 20px;
